Fix selector overlapping overlay

--- a/src/Styles/_media.desktop.scss
+++ b/src/Styles/_media.desktop.scss
@@ -260,7 +260,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 1000;
   background: $background-color;
 }
 
